# bootloader

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  STM32F103C8Tx_FLASH.ld  STM32F1_FLASH.ld  STM32F1_FLASH_boot.ld
.github/workflows/: cmake.yml
scripts/: patch_image_header.py
source/: CMakeLists.txt  bootloader.c  bootloader.h  com.c  com.h  crc32.c  crc32.h  delay.c  delay.h  firmware.c  firmware.h  image.c  image.h  img-header.c  img-header.h  intercom.h  main.c  memory_map.h  pins.h  ringbuffer.c  ringbuffer.h  storage.c  storage.h  storage_internal.c  storage_internal.h  storage_sim800.c  storage_sim800.h  toolbox.h  usart.c  usart.h
source/comhdlc/: com.c  com.h  comhdlc.c  comhdlc.h  minihdlc.c  minihdlc.h
source/comhdlc/tinyframe/: TF_Config.h  TinyFrame.c
source/drivers/: bkp.c  bkp.h  flash.c  flash.h  led.c  led.h  spi.c  spi.h  timer.c  timer.h  usart.c  usart.h  usart_driver.c  usart_driver.h
source/modem/: modem.c  modem.h  modem_init.c  modem_init.h
source/modem/at_command/: at_command.c  at_command.h
source/modem/sim800/: sim800.c  sim800.h
source/modem/sim800/at_command/: at_command.c  at_command.h
source/sim800/: sim800.c
source/storage/: storage_internal.c  storage_sim800.c
source/system/: assert.c  assert.h  dbgout.c  dbgout.h  syscalls.c  system.c  system.h
source/tinyframe/: TF_Config.h
source/utilities/: crc32.c  crc32.h  ringbuffer.c  ringbuffer.h  toolbox.h
test/: CMakeLists.txt
test/src/stubs/: delay.c  delay.h
test/src/stubs/libopencm3/cm3/: nvic.c  nvic.h
test/src/stubs/libopencm3/stm32/: gpio.c  gpio.h  rcc.c  rcc.h  usart.c  usart.h
test/src/tests/: TestImage.c  TestImage_Runner.c  test_image.c  test_storage.c  test_storage_Runner.c  test_usart_driver.c  test_usart_driver_Runner.c
test/tests/: TestImage.c  TestImage.h  TestImage_Runner.c  TestStorage.c  TestStorage_Runner.c
toolchain/: arm-gcc-toolchain.cmake
